# docs/swagger.json
@@ -51,7 +51,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successfully retrieved messages",
+                        "description": "Successfully got messages",
                         "schema": {
                             "$ref": "#/definitions/models.FilterResponse"
                         }
@@ -152,12 +152,14 @@
         "models.Status": {
             "type": "string",
             "enum": [
+                "COMPLETED",
                 "PROCESSING",
-                "COMPLETED"
+                "FAILED"
             ],
             "x-enum-varnames": [
+                "StatusCompleted",
                 "StatusProcessing",
-                "StatusCompleted"
+                "StatusFailed"
             ]
         }
     }
